--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
 <app-about-me></app-about-me>
+<app-timeline></app-timeline>
 <app-projects></app-projects>
 <app-footer></app-footer>
