--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -17,7 +17,10 @@
           <a class="nav-link pe-4" href="#sobremi">Sobre mí</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link pe-4" href="#formacionexperiencia">Formación / Experiencia</a>
+          <a class="nav-link pe-4" href="#formacion">Formación</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pe-4" href="#experiencia">Experiencia</a>
         </li>
         <li class="nav-item">
           <a class="nav-link pe-4" href="#proyectos">Proyectos</a>
