--- a/src/app/core/timeline/timeline.component.html
+++ b/src/app/core/timeline/timeline.component.html
@@ -1,18 +1,9 @@
-<section class="d-lg-flex justify-content-center align-items-center" id="formacionexperiencia">
+<section class="justify-content-center align-items-center" id="formacion">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-12">
-        <h2 class="mb-5 text-center subtitles">Formación</h2>
+        <h2 class="mb-5 text-center subtitles">Estudios</h2>
         <div class="timeline">
-          <div class="timeline-wrapper">
-            <div class="timeline-yr">
-              <span>2023</span>
-            </div>
-            <div class="timeline-info">
-              <h3><span class="subtitles2">Big Data</span><small>The Valley Digital Business School</small></h3>
-              <p class="text-secondary">Aprendí Google Analytics, fundamentos de Machine Learning, Python y SQL aplicados a mundo de los datos y Apache Spark.</p>
-            </div>
-          </div>
           <div class="timeline-wrapper">
             <div class="timeline-yr">
               <span>2020/22</span>
@@ -20,15 +11,6 @@
             <div class="timeline-info">
               <h3><span class="subtitles2">Desarrollo de Aplicaciones Web</span><small>CPR A Fundación</small></h3>
               <p class="text-secondary">Terminé el Ciclo Superior de Desarrollo de Aplicaciones Web en 2022.</p>
-            </div>
-          </div>
-          <div class="timeline-wrapper">
-            <div class="timeline-yr">
-              <span>2020</span>
-            </div>
-            <div class="timeline-info">
-              <h3><span class="subtitles2">Inglés B2</span><small>Cámara de Comercio A Coruña</small></h3>
-              <p class="text-secondary">Con este curso conseguí el nivel B2 de inglés.</p>
             </div>
           </div>
           <div class="timeline-wrapper">
@@ -43,7 +25,51 @@
         </div>
       </div>
       <div class="col-lg-6 col-12">
-        <h2 class="mb-5 text-center subtitles">Experiencia</h2>
+        <h2 class="mb-5 text-center subtitles">Cursos</h2>
+        <div class="timeline">
+          <div class="timeline-wrapper">
+            <div class="timeline-yr">
+              <span>2023</span>
+            </div>
+            <div class="timeline-info">
+              <h3><span class="subtitles2">TypeScript</span><small>Udemy</small></h3>
+              <p class="text-secondary">Aprendí todo necesario para la utilización del lenguaje en un entorno de desarrollo.</p>
+            </div>
+          </div>
+          <div class="timeline-wrapper">
+            <div class="timeline-yr">
+              <span>2023</span>
+            </div>
+            <div class="timeline-info">
+              <h3><span class="subtitles2">Angular</span><small>Clúster TIC Galicia</small></h3>
+              <p class="text-secondary">Aprendí los aspectos principales del framework de JavaScript.</p>
+            </div>
+          </div>
+          <div class="timeline-wrapper">
+            <div class="timeline-yr">
+              <span>2023</span>
+            </div>
+            <div class="timeline-info">
+              <h3><span class="subtitles2">Big Data</span><small>The Valley Digital Business School</small></h3>
+              <p class="text-secondary">Aprendí Google Analytics, fundamentos de Machine Learning, Python y SQL aplicados a mundo de los datos y Apache Spark.</p>
+            </div>
+          </div>
+          <div class="timeline-wrapper">
+            <div class="timeline-yr">
+              <span>2020</span>
+            </div>
+            <div class="timeline-info">
+              <h3><span class="subtitles2">Inglés B2</span><small>Cámara de Comercio A Coruña</small></h3>
+              <p class="text-secondary">Con este curso conseguí el nivel B2 de inglés.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container mt-4" id="experiencia">
+    <h2 class="mb-5 text-center subtitles">Experiencia</h2>
+    <div class="d-flex align-items-center justify-content-center flex-direction-row">
         <div class="timeline">
           <div class="timeline-wrapper">
             <div class="timeline-yr">
@@ -64,7 +90,6 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
   </div>
 </section>
